      thanks to Tim Beechey.
      \item Fix a bug causing an error in \code{predict} 
      and related methods when two-level factors or 
      logical variables were used as covariates in
      non-linear models thanks to Martin Schmettow.
      \item Fix a bug causing an error when passing 
      lists to additional arguments of smoothing 
      functions thanks to Wayne Folta.
    }
  }
}

\section{CHANGES IN VERSION 1.0.1}{
  \subsection{MINOR CHANGES}{
    \itemize{
      \item Center design matrices inside the Stan code
      instead of inside \code{make_standata}.
      \item Get rid of several warning messages
      occuring on CRAN.
    }
  }
}

\section{CHANGES IN VERSION 1.0.0}{
  This is one of the largest updates of \code{brms} since its 
  initial release. In addition to many new features, 
  the multivariate \code{'trait'} syntax has been removed 
  from the package as it was confusing for users, required 
  much special case coding, and was hard to maintain.
  See \code{help(brmsformula)} for details of the formula
  syntax applied in \pkg{brms}.
  \subsection{NEW FEATURES}{
    \itemize{ 
      \item Allow estimating correlations between 
      group-level effects defined across multiple formulae 
      (e.g., in non-linear models) by specifying IDs in
      each grouping term via an extended \pkg{lme4} syntax.
      \item Implement distributional regression models
      allowing to fully predict auxiliary parameters 
      of the response distribution. Among many other 
      possibilities, this can be used to model 
      heterogeneity of variances.
      \item Zero-inflated and hurdle models do not use
      multivariate syntax anymore but instead have
      special auxiliary parameters named \code{zi} and 
      \code{hu} defining zero-inflation / hurdle probabilities.
      \item Implement the \code{von_mises} family to model
      circular responses.
      \item Introduce the \code{brmsfamily} function for